chore: do not require beta but stable craftcms ^5.0 to make plugin installable

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "type": "craft-plugin",
   "minimum-stability": "dev",
   "require": {
-    "craftcms/cms": "^5.0.0-beta.6"
+    "craftcms/cms": "^5.0.0"
   },
   "autoload": {
     "psr-4": {
